--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ pip install django
 pip install psycopg2-binary
 pip install djangorestframework
 pip install django-cors-headers
+pip install djangorestframework-simplejwt
