--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Entornos virtuales
+venv/
 .env
 env/
+.env/
+.env*/
+.venv/
 
+# Django
+media/
+staticfiles/
+
+# VSCode
+.vscode/
