--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ pip install psycopg2-binary
 pip install djangorestframework
 pip install djangorestframework-simplejwt
 pip install django-cors-headers
+pip install reportlab
