--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ pip install djangorestframework
 pip install djangorestframework-simplejwt
 pip install django-cors-headers
 pip install reportlab
+pip install python-dotenv
