--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ EMAIL_HOST_PASSWORD=password
 
 PASSWORD_RESET_EMAIL_HOST_USER=email@example.com
 PASSWORD_RESET_EMAIL_HOST_PASSWORD=password
+
+CREDENTIAL_EMAIL_HOST_USER=email@example.com
+CREDENTIAL_EMAIL_HOST_PASSWORD=password
