--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
 SECRET_KEY=django-insecure-key-here
 DEBUG=True
-
-DB_NAME=primeraInfancia
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
 EMAIL_HOST_USER=email@example.com
 EMAIL_HOST_PASSWORD=password
